movim-massacritica/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: movim-massacritica
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
